--- a/src/Pages/Experiments/ExperimentRunDetail.razor
+++ b/src/Pages/Experiments/ExperimentRunDetail.razor
@@ -40,6 +40,10 @@
                                     <td>@model.Id.ToString()</td>
                                 </tr>
                                 <tr>
+                                    <td>Description</td>
+                                    <td>@model.Description</td>
+                                </tr>
+                                <tr>
                                     <td>Start</td>
                                     <td>@model.Start.ToString()</td>
                                 </tr>
