--- a/src/Pages/Datasets/EditGroundTruthImage.razor
+++ b/src/Pages/Datasets/EditGroundTruthImage.razor
@@ -16,38 +16,60 @@
     @if (Model is not null)
     {
         <RadzenRow AlignItems="AlignItems.Center">
-            <RadzenColumn Size="12" SizeMD="4">
-                <RadzenLabel Text="Name" title="Name" />
-            </RadzenColumn>
-            <RadzenColumn Size="12" SizeMD="8">
-                <RadzenTextBox Disabled=@IsSaving Style="width: 100%;" Name="Name" @bind-Value=@Model.DisplayName />
-            </RadzenColumn>
-        </RadzenRow>
-        @if (Model.Fields is not null)
-        {
-            foreach (var field in Model.Fields)
-            {
-                <RadzenRow AlignItems="AlignItems.Center">
-                    <RadzenColumn Size="12" SizeMD="4">
-                        <span>@field.Name</span>
-                    </RadzenColumn>
-                    <RadzenColumn Size="12" SizeMD="6">
-                        <RadzenTextBox Style="width: 100%;" @bind-Value=@field.Value />
-                    </RadzenColumn>
-                </RadzenRow>
-            }
-        }
-        <RadzenRow AlignItems="AlignItems.Center">
-            <RadzenColumn Size="12" SizeMD="8">
-                @if (!string.IsNullOrEmpty(Base64Image))
-                {
-                    <div style="width:100%;height:500px; overflow:scroll;text-align:right;">
-                        <img style="height:@ImageZoomLevel%; width:auto;" src=@Base64Image />
-                    </div>
-                }
-            </RadzenColumn>
-            <RadzenColumn Size="12" SizeMD="4">
+            <RadzenColumn Size="12" SizeMD="6">
                 <RadzenStack Orientation="Orientation.Vertical">
+                    <RadzenRow>
+                        <RadzenStack Orientation="Orientation.Horizontal" Gap="0.5rem" AlignItems="AlignItems.Center" class="rz-p-4 rz-mb-6 rz-border-radius-1" Style="border: var(--rz-grid-cell-border); width:100%;">
+                            <RadzenRow Style="width:100%">
+                                <RadzenColumn SizeMD="9">
+                                    @if (ImageInfo is not null)
+                                    {
+                                        <RadzenText TagName="TagName.H4">Width: @ImageInfo.Width, Height: @ImageInfo.Height</RadzenText>
+                                    }
+                                </RadzenColumn>
+                                <RadzenColumn SizeMD="3">
+                                    <RadzenStack Orientation="Orientation.Horizontal">
+                                        <RadzenNumeric Style="width:90px" Disabled=@(string.IsNullOrEmpty(Base64Image)) Max="90" Min="20" TValue="int" Value=@ResizePercent />
+                                        <RadzenButton Disabled=@(string.IsNullOrEmpty(Base64Image)) ButtonStyle=ButtonStyle.Info Click=@Resize Size="ButtonSize.Small" Text="Resize" />
+                                    </RadzenStack>
+                                </RadzenColumn>
+                            </RadzenRow>
+                        </RadzenStack>
+                    </RadzenRow>
+                    <RadzenRow>
+                        @if (!string.IsNullOrEmpty(Base64Image))
+                        {
+                            <div style="width:100%;height:500px; overflow:scroll;text-align:right;">
+                                <img style="height:@ImageZoomLevel%; width:auto;" src=@Base64Image />
+                            </div>
+                        }
+                    </RadzenRow>
+                </RadzenStack>
+            </RadzenColumn>
+            <RadzenColumn Size="12" SizeMD="6">
+                <RadzenStack Orientation="Orientation.Vertical">
+                    <RadzenRow AlignItems="AlignItems.Center">
+                        <RadzenColumn Size="12" SizeMD="4">
+                            <RadzenLabel Text="Name" title="Name" />
+                        </RadzenColumn>
+                        <RadzenColumn Size="12" SizeMD="8">
+                            <RadzenTextBox Disabled=@IsSaving Style="width: 100%;" Name="Name" @bind-Value=@Model.DisplayName />
+                        </RadzenColumn>
+                    </RadzenRow>
+                    @if (Model.Fields is not null)
+                    {
+                        foreach (var field in Model.Fields)
+                        {
+                            <RadzenRow AlignItems="AlignItems.Center">
+                                <RadzenColumn Size="12" SizeMD="4">
+                                    <span>@field.Name</span>
+                                </RadzenColumn>
+                                <RadzenColumn Size="12" SizeMD="6">
+                                    <RadzenTextBox Style="width: 100%;" @bind-Value=@field.Value />
+                                </RadzenColumn>
+                            </RadzenRow>
+                        }
+                    }
                     <h3>Zoom Level:</h3>
                     <RadzenSelectBar TValue="int" Size="ButtonSize.Small" @bind-Value="@ImageZoomLevel">
                         <Items>
