--- a/src/Pages/Datasets/DataSetDashboard.razor
+++ b/src/Pages/Datasets/DataSetDashboard.razor
@@ -35,6 +35,7 @@
                     <Template Context="entry">
                         <RadzenButton Text="Open" Click="()=>OpenDataset(entry)" />
                         <RadzenButton Text="Edit" Click="()=>Edit(entry)" />
+                        <RadzenButton Text="Copy" Click="()=>CopyAsync(entry)" />
                         <RadzenButton Click=@(args => DeleteAsync(entry)) Text="Delete" ButtonStyle="ButtonStyle.Danger" />
                     </Template>
                 </RadzenDataGridColumn>
