--- a/src/Pages/Datasets/DataSetManager.razor
+++ b/src/Pages/Datasets/DataSetManager.razor
@@ -1,6 +1,9 @@
 ﻿@page "/datasets/{DatasetId:guid}"
 @using ExperimentServer.Models
-
+@if (DataSetModel is not null)
+{
+    <PageTitle>Ground Truths - @DataSetModel.DisplayName</PageTitle>
+}
 <RadzenStack>
     @if (ErrorMessage is not null)
     {
@@ -19,14 +22,18 @@
                     <RadzenButton Click=@Back Text="Datasets" ButtonStyle="ButtonStyle.Light" />
                 </RadzenColumn>
             </RadzenRow>
-            </RadzenStack>
+        </RadzenStack>
     </RadzenRow>
     <RadzenRow>
         <RadzenDataGrid @ref="@dataGrid" ColumnWidth="200px" AllowFiltering="true" AllowPaging="true" AllowSorting="true" Data="@model.Items">
             <HeaderTemplate>
                 <RadzenRow RowGap="0" Style="width:100%">
                     <RadzenText TextStyle="TextStyle.H6" Class="rz-display-flex rz-align-items-center rz-m-0">
-                        <RadzenIcon Icon="gavel" class="rz-mr-1" /><b>Ground Truths</b>
+                        @if (DataSetModel is not null)
+                        {
+                            <RadzenIcon Icon="gavel" class="rz-mr-1" />
+                            <b>@DataSetModel.DisplayName (@model.Items.Count)</b>
+                        }
                     </RadzenText>
                 </RadzenRow>
             </HeaderTemplate>
