--- a/src/Pages/Datasets/DataSetManager.razor
+++ b/src/Pages/Datasets/DataSetManager.razor
@@ -14,9 +14,12 @@
     <RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" Gap="0.5rem" AlignItems="AlignItems.Center" class="rz-p-4 rz-mb-6 rz-border-radius-1" Style="border: var(--rz-grid-cell-border); width:100%;">
             <RadzenRow Style="width:100%">
-                <RadzenColumn SizeMD="11">
-                    <RadzenButton Click=@(args => AddNew()) Text="New" ButtonStyle="ButtonStyle.Primary" />
-                    <RadzenButton Click=@(args => RefreshAsync()) Text="Refresh" ButtonStyle="ButtonStyle.Primary" />
+                <RadzenColumn SizeMD="6">
+                    <RadzenButton Click=@(args => AddNew()) Text="New" ButtonStyle="ButtonStyle.Primary" title="Adds a new ground truth to dataset" />
+                    <RadzenButton Click=@(args => RefreshAsync()) Text="Refresh" ButtonStyle="ButtonStyle.Primary" title="Refresh dataset ground truths" />
+                </RadzenColumn>
+                <RadzenColumn SizeMD="5">
+                    <RadzenButton Click=@OpenCopyAllToDialog Text="Copy All To" ButtonStyle="ButtonStyle.Info" title="Copy all ground truths to another dataset" />
                 </RadzenColumn>
                 <RadzenColumn SizeMD="1">
                     <RadzenButton Click=@Back Text="Datasets" ButtonStyle="ButtonStyle.Light" />
@@ -38,7 +41,7 @@
                 </RadzenRow>
             </HeaderTemplate>
             <Columns>
-                <RadzenDataGridColumn TItem="GroundTruthImage" Title="Start" Width="20px">
+                <RadzenDataGridColumn TItem="GroundTruthImage" Title="Name" Width="20px">
                     <Template Context="entry">
                         @entry.DisplayName
                     </Template>
