add std deviation math lib, tabs for readability

--- a/src/Pages/Experiments/ExperimentsComparison.razor
+++ b/src/Pages/Experiments/ExperimentsComparison.razor
@@ -7,12 +7,27 @@
         </RadzenStack>
     </RadzenRow>
     <RadzenRow>
-        <TableView TableModel="@Inputs" />
-        <TableView TableModel="@Outputs" />
-        <TableView TableModel="@FieldsAccuracy" />
-        @foreach (var failure in PerRunFailureComparisions)
-        {
-            <TableView TableModel="@failure" />
-        }
+        <RadzenTabs RenderMode="TabRenderMode.Client">
+            <Tabs>
+                <RadzenTabsItem Text="Inputs/Outputs">
+                    <RadzenRow>
+                        <TableView TableModel="@Inputs" />
+                        <TableView TableModel="@Outputs" />
+                    </RadzenRow>
+                </RadzenTabsItem>
+                <RadzenTabsItem Text="Accuracy">
+                    <RadzenRow>
+                        <TableView TableModel="@FieldsAccuracy" />
+                        @foreach (var failure in PerRunFailureComparisions)
+                        {
+                            <TableView TableModel="@failure" />
+                        }
+                    </RadzenRow>
+                </RadzenTabsItem>
+            </Tabs>
+        </RadzenTabs>
     </RadzenRow>
 </RadzenStack>
+
+
+
